Ch feedback implementation #165967678 (#76)
* chore(babel):add babel-cli

* chore(babel):add babel-cli

* chore(babel):add babel-cli

* chore(babel): update babel

* chore(package.json):update package.js

* chore(update readme):readme documentation

* chore(refactor application):ui pages and api

* feature(password reset): implement reset password

* feature(reset password):tdd for password reset

* feature(password reset):refactor password reset

* remove .env file

* remove .env

* [chore #165967678] implement feedback

* uninstall uuid
